# notion_viz

./: README.md  index.html  main.py  pyproject.toml
app/: main.py
