[tool.poetry]
name = "notion-viz"
version = "0.1.0"
description = ""
authors = ["Deepak Chauhan <127858338+deechauhan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
